fixed pre layout issue; line 102 and 103 was on same line making grid/flex layout not respect equal sizes for child

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,6 @@ body {
 #main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
     row-gap: 48px;
     column-gap: 16px;
 }
